--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HowTo</title>
     <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
 <h1>How to Morse</h1>
